[package]
name = "exoline-test"
version = "2.0.0"
edition = "2021"
license = "MIT"

[dependencies]
exoline = { path = "../exoline" }
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
shellwords = "1.1.0"
rustyline = { version = "15.0.0", features = ["derive"] }
comfy-table = "7.1.3"
csv = "1.3.1"
chrono = "0.4.41"
